--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Weather PWA">
     <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
+    <meta name="description" content="Test pour les PWA">
+    <meta name="theme-color" content="#2F3BA2" />
 </head>
 <body>
     <h1>Test PWA</h1>
