--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 
     <link rel="manifest" href="manifest.json">
+    <script>
+        // Register service worker.
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('service-worker.js') 
+            .then((reg) => {
+            console.log('Service worker registered.', reg); });
+            }); 
+        }
+    </script>
 
     <!-- Add iOS meta tags and icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
