--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 
     <link rel="manifest" href="manifest.json">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         // Register service worker.
     if ('serviceWorker' in navigator) {
@@ -25,7 +26,12 @@
     <meta name="description" content="Test pour les PWA">
     <meta name="theme-color" content="#2F3BA2" />
 </head>
+<header>
+    <button class="nav-link px-lg-4 px-2" id="butInstall" aria-label="Install" hidden>
+    Installer la PWA</button>
+</header>
 <body>
     <h1>Test PWA</h1>
 </body>
+<script src="js/install.js"></script>
 </html>
