--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <header>
-    <button class="nav-link px-lg-4 px-2" id="butInstall" aria-label="Install" >
+    <button id="butInstall" aria-label="Install" hidden >
     Installer la PWA</button>
 </header>
 <body>
